--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
     color: #8f8f8f;
 }
 
-/* Headings */
+/* Headings ============ */
 .big-heading {
     font-size: 3.5rem;
     line-height: 1.5;
